charon/tests/ui/unsupported/unbound-lifetime.out
error[E0261]: use of undeclared lifetime name `'a`
 --> tests/ui/unsupported/unbound-lifetime.rs:5:13
  |
5 | fn get(_x: &'a u32) {}
  |       -     ^^ undeclared lifetime
  |       |
  |       help: consider introducing lifetime `'a` here: `<'a>`

error: Could not find region: Region { kind: ReError(ErrorGuaranteed { todo: "ErrorGuaranteed(())" }) }
       
       Region vars map:
       {}
       
       Bound region vars:
       [[]]
 --> tests/ui/unsupported/unbound-lifetime.rs:5:1
  |
5 | fn get(_x: &'a u32) {}
  | ^^^^^^^^^^^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::get
 --> tests/ui/unsupported/unbound-lifetime.rs:5:1
  |
5 | fn get(_x: &'a u32) {}
  | ^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0261`.
Error: Charon driver exited with code 101
