charon/tests/ui/unsupported/unbound-lifetime.rs
//@ known-failure

// This is incorrect code but the error is weird.
fn get(_x: &'a u32) {}
